# pnio-validator

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: gsd_registry.json
reports/: expected_model.json  f841_short.json  f841_timeout.json  ok.json  random_latency.json  sample_gsdml.json  summary.json
src/pnio_validator/: adapters.py  app_service.py  cli.py  dcp.py  dcp_fake.py  device_model.py  gsdml_parser.py  main_qml.py  main_qt.py  models.py  pnio_client.py  pnio_client_fake.py  qt_backend.py  registry.py  report.py  scanner.py  suite.py  validator.py
src/pnio_validator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/pnio_validator/gui/: scan_async.py
src/pnio_validator/qml/: Main.qml
src/pnio_validator/util/: mac.py
tests/: test_cli_match.py  test_dcp_fake.py  test_fake_mac.py  test_gsdml_parser.py  test_gsdml_summarize.py  test_registry.py  test_validator.py
tests/fixtures/: sample_gsdml.xml
