[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pnio-validator"
version = "0.1.0"
description = "PROFINET IO strict validation tool (WIP)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
pnio-validator = "pnio_validator.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]